sgd/reproduction/playground/objects/SMAX_PS_Quote_Lines__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Activity_Type__c</fullName>
        <label>アクティビティタイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Activity_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>アクティビティ</label>
        <referenceTo>SVMXC__Activity_Master__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cloned_From_Quote_Lines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>元見積明細</label>
        <referenceTo>SMAX_PS_Quote_Lines__c</referenceTo>
        <relationshipLabel>見積明細</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Procured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>顧客支給品</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Target_Amount__c</fullName>
        <formula>IF(AND(SMAX_PS_Expense_Target__c,  NOT(ISPICKVAL(SMAX_PS_Line_Type__c, &apos;1003&apos;) )), SMAX_PS_Line_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>諸経費対象</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>諸経費対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Item_Name__c</fullName>
        <label>見積品目名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Line_Description__c</fullName>
        <label>項目の説明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Line_Price2__c</fullName>
        <label>項目価格</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Line_Price__c</fullName>
        <formula>SMAX_PS_Quantity2__c  *  SMAX_PS_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Line_Type__c</fullName>
        <label>種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>人件費</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>部品明細</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Pack_Unit_No__c</fullName>
        <label>袋単位</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <label>製品区分</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Service_Target__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_External_Id__c</fullName>
        <formula>SMAX_PS_Product__r.SVMX_PS_External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目外部キー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Name__c</fullName>
        <formula>SMAX_PS_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>品目</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quantity2__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote__c</fullName>
        <label>サービス見積</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Refer_PB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>価格表参照</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remarks__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSDelDate__c</fullName>
        <formula>SMAX_PS_Product__r.SMAX_PS_SAP_HTSDelDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTS基準納期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSPlantStatus_Fml__c</fullName>
        <formula>TEXT(SMAX_PS_Product__r.SMAX_PS_SAP_HTSPlantStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTSプラントステータス（商品）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSPlantStatus__c</fullName>
        <label>HTSプラントステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SAP_HTSPlantStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialCd__c</fullName>
        <formula>SMAX_PS_Product__r.SMAX_PS_SAP_MaterialCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP品目コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialGroup1__c</fullName>
        <formula>CASE(SMAX_PS_Product__r.SMAX_PS_SAP_MaterialGroup1__c,
&quot;ZG0&quot;,&quot;最終在庫部品&quot;,
&quot;ZG1&quot;,&quot;ローテーションモジュール&quot;,
&quot;ZG2&quot;,&quot;重要部品&quot;,
&quot;ZG3&quot;,&quot;有寿命部品&quot;,
&quot;ZG4&quot;,&quot;サービスTOOLS&quot;,
&quot;ZG5&quot;,&quot;通常部品&quot;,
&quot;ZG6&quot;,&quot;補用部品&quot;,
&quot;ZG7&quot;,&quot;特殊部品&quot;,
&quot;ZG8&quot;,&quot;補助材料&quot;,
&quot;ZG9&quot;,&quot;アップグレード&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>補用品フラグ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>作業内容の詳細</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_PBE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス価格No.</label>
        <referenceTo>SVMXC__Service_Pricebook_Entry__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote_IP_Line__c</fullName>
        <label>見積対象製品・項番</label>
        <referenceTo>SMAX_PS_Service_Quote_IP_Line__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <label>対象区分</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Line_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Service_Target</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Spec_PLM__c</fullName>
        <formula>SMAX_PS_Product__r.SMAX_PS_Spec_PLM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>仕様</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tech_Total__c</fullName>
        <label>Tech Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Of_Measure__c</fullName>
        <label>単位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Unit_Of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Price__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Use_Purpose__c</fullName>
        <label>用途</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>見積明細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMAX_PS_Quote__c</columns>
        <columns>SMAX_PS_Service_Quote_IP_Line__c</columns>
        <columns>SMAX_PS_Product__c</columns>
        <columns>SMAX_PS_Quantity2__c</columns>
        <columns>SMAX_PS_Product_Classification__c</columns>
        <columns>SMAX_PS_Service_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QL-{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Validate_For_Status</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL(SMAX_PS_Quote__r.SVMXC__Status__c , &apos;Draft&apos;), false, true)</errorConditionFormula>
        <errorMessage>ドラフトステータスのサービス見積の明細のみ変更・登録が可能です。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Validate_HTS_Plant</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(ISBLANK(TEXT(SMAX_PS_SAP_HTSPlantStatus__c ))),  true, false)</errorConditionFormula>
        <errorMessage>廃止部品があります。HTSプラントステータスを確認してください。</errorMessage>
    </validationRules>
</CustomObject>